removeextra  empty space above editor and fix default horizontal scroll in logs table

--- a/src/plugins/explore/public/components/data_table/explore_data_table.scss
+++ b/src/plugins/explore/public/components/data_table/explore_data_table.scss
@@ -1,4 +1,9 @@
 .explore-table-container {
   height: 100%;
   mask-image: none;
+
+  /* stylelint-disable-next-line @osd/stylelint/no_modifying_global_selectors */
+  .euiFlexGroup {
+    width: 100%;
+  }
 }
